# carapace

./: .dockerignore  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  REVIEW_POLICY.yaml  SECURITY.md  TODO.md  carapace_test.json5  clippy.toml  config.example.json5  deny.toml  feature-status.yaml  flake.nix  package.json  test_vertex_backend.sh
.cargo/: audit.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  channel-smoke-report.yml  config.yml  cookbook-recipe-request.yml  docs-feedback.yml  feature-request.yml  setup-help-request.yml  setup-smoke-report.yml  team-pilot-request.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql-actions.yml  codeql-rust.yml  codeql.yml  pages.yml  pr-base-branch-check.yml  release.yml  triage-labels.yml
docs/: README.md  architecture.md  channel-smoke.md  channels.md  cli.md  config-reference.md  feature-evidence.yaml  feature-status.yaml  getting-started.md  plugin-development.md  release.md  roadmap.md  security-comparison.md  security.md
docs/cookbook/: README.md  _template.md  discord-assistant.md  guarded-local-project-assistant.md  hooks-safe-automation.md  matrix-assistant.md  named-routes-multi-model.md  openai-compatible-endpoint.md  secure-local-first-reply.md  signal-assistant.md  telegram-webhook-assistant.md
docs/design/: capability-aware-routing.md
docs/plans/: align_vertex_provider_model.md  vertex_ai_integration.md
docs/protocol/: config-reference.md  config.md  credentials.md  dto-inventory.md  http.md  pairing.md  websocket.md
docs/refactor/: compatibility-checklist.md  critical-path.md  implementation-plan.md  rust-migration.md
docs/releases/: v0.1.0-preview10.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/site/: capability-matrix.md  cli-reference.md  cli-tasks.md  docs.md  first-run.md  get-unstuck.md  help.md  install.md  ops.md  providers.md  reference.md  security-ops.md  security.md
docs/superpowers/plans/: 2026-03-11-filesystem-tools.md
docs/superpowers/specs/: 2026-03-11-filesystem-tools-design.md  2026-04-05-shared-oauth-onboarding-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_secret_format_parsing.rs
scripts/: build-control-ui.sh  build-pages-content.sh  build-pages-cookbook.sh  check-control-ui-dist.sh  check-deny-ignore-expirations.sh  check-docs-state-messaging.sh  check-matrix-rustls-features.sh  check-matrix-wire-guards.sh  check-pages-links.sh  check-public-copy.sh  check-runtime-bridge-usage.sh  check-trivyignore-expirations.sh  create-pr.sh  install.ps1  install.sh  link_signal.sh  run-nextest-guarded.sh  setup-hooks.sh
scripts/hooks/: pre-commit  pre-push
scripts/smoke/: live-channel-smoke.sh  matrix-smoke.sh  update-linux-orbstack.sh  update-macos-local.sh  verify-release-artifacts.sh
src/: crypto.rs  lib.rs  main.rs  model_names.rs  net_util.rs  paths.rs  runtime_bridge.rs  thread_util.rs  time.rs
src/agent/: anthropic.rs  anthropic_wire.rs  azure_openai.rs  bedrock.rs  builtin_tools.rs  classifier.rs  claude_cli.rs  codex.rs  context.rs  executor.rs  factory.rs  filesystem_tools.rs  gemini.rs  mod.rs  nearai.rs  ollama.rs  openai.rs  openai_compatible.rs  openai_wire.rs  output_sanitizer.rs  provider.rs  sandbox.rs  tool_policy.rs  tools.rs  venice.rs  vertex.rs
src/agent/prompt_guard/: config_lint.rs  postflight.rs  preflight.rs
src/auth/: mod.rs  profile_runtime.rs  profiles.rs
src/channels/: activity.rs  console.rs  discord.rs  discord_gateway.rs  inbound.rs  matrix.rs  media_fetch.rs  mod.rs  signal.rs  signal_receive.rs  signal_test.rs  slack.rs  slack_inbound.rs  telegram.rs  telegram_inbound.rs  telegram_receive.rs  test_ws.rs  webhook.rs  whatsapp.rs
src/channels/matrix/: inbound_dlq.rs  recovery.rs  verification.rs
src/cli/: backup_crypto.rs  chat.rs  mod.rs  skill.rs
src/config/: defaults.rs  mod.rs  routes.rs  schema.rs  secrets.rs  watcher.rs
src/credentials/: linux.rs  macos.rs  migration.rs  mod.rs  windows.rs
src/cron/: executor.rs  mod.rs  tick.rs
src/devices/: mod.rs
src/discovery/: mod.rs
src/exec/: mod.rs
src/gateway/: mod.rs
src/hooks/: auth.rs  handler.rs  mod.rs  registry.rs
src/links/: mod.rs
src/logging/: audit.rs  buffer.rs  mod.rs  redact.rs  throttle.rs
src/media/: analysis.rs  fetch.rs  mod.rs  store.rs
src/messages/: delivery.rs  mod.rs  outbound.rs
src/migration/: aider.rs  mod.rs  nemoclaw.rs  openclaw.rs  opencode.rs
src/nodes/: mod.rs
src/onboarding/: anthropic.rs  bedrock.rs  codex.rs  gemini.rs  mod.rs  oauth.rs  setup.rs  vertex.rs
src/plugins/: bindings.rs  capabilities.rs  dispatch.rs  engine.rs  host.rs  loader.rs  mod.rs  permissions.rs  runtime.rs  sandbox.rs  signature.rs  tests.rs  tools.rs
src/plugins/caps/: mod.rs
src/server/: bind.rs  control.rs  csrf.rs  headers.rs  health.rs  http.rs  metrics.rs  mod.rs  openai.rs  plugin_bootstrap.rs  ratelimit.rs  resource_monitor.rs  startup.rs  ws.rs
src/server/ws/: golden_tests.rs  limits.rs  mod.rs  tests.rs
src/sessions/: crypto.rs  file_lock.rs  integrity.rs  mod.rs  retention.rs  scoping.rs  store.rs
src/tailscale/: mod.rs
src/tasks/: mod.rs
src/test_support/: agent.rs  config.rs  env.rs  mod.rs  plugins.rs  secrets.rs
src/tls/: ca.rs  mod.rs
src/update/: mod.rs
src/usage/: mod.rs
tests/: golden_test.rs  http_endpoints_test.rs  plugin_e2e.rs  server_integration_test.rs  ssrf_test.rs
tests/fixtures/: tool-plugin.wit
tests/fixtures/update/: v0.7.0-sha256sums.bundle
tests/golden/http/: a2ui.json  channel-webhooks.json  connect.json  control-ui.json  hooks-agent.json  hooks-wake.json  openai-chat-completions.json  openresponses.json  tools-invoke.json
tests/golden/ws/: errors.json  events.json  handshake.json  messages.json
ui/control-ui/: index.html
ui/control-ui/assets/: main.css  main.js
website/: 404.html  getting-started.html  index.html  styles.css
wit/: plugin.wit
(+90 files in other folders)
