[package]
name = "carapace"
version = "0.8.0"
edition = "2021"
rust-version = "1.93"
description = "A security-focused personal AI assistant — hardened alternative to openclaw/clawdbot"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "signal", "io-util", "process"] }
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.13", features = ["rustls", "stream", "json", "blocking", "multipart", "form"], default-features = false }
hickory-resolver = "0.26"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1"
strum = { version = "0.28", features = ["derive"] }
regex = "1"
glob = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
wasmtime = { version = "44", features = ["component-model"] }
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std", "zeroize"] }
futures-util = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
getrandom = "0.4"
hex = "0.4"
sha2 = "0.11"
hkdf = "0.13"
hmac = "0.13"
subtle = "2"
mdns-sd = "0.19"
rcgen = "0.14"
x509-parser = "0.18"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
flate2 = "1"
tar = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
crc32fast = "1"
rpassword = "7"
# sigstore-trust-root 0.6.6 depends on tough ^0.21, which is vulnerable to
# CVE-2026-6966 and CVE-2026-6967. The fork commit follows upstream's tough
# 0.22 move and also bumps rustls-webpki past current RustSec advisories while
# we wait for an upstream release.
sigstore-trust-root = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a", features = ["tuf"] }
sigstore-types = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a" }
sigstore-verify = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a" }

[target.'cfg(windows)'.dependencies]
win32job = "2.0.3"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Threading"] }
rappct = "0.13.3"
self-replace = "1.5"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[dev-dependencies]
filetime = "0.2"
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wit-component = { version = "0.248.0", features = ["dummy-module"] }
wit-parser = "0.249.0"

[features]
gateway = []
auth-profiles = []
keychain-tests = []
secret-service-tests = []
credential-manager-tests = []

[lib]
name = "carapace"
path = "src/lib.rs"

[[bin]]
name = "cara"
path = "src/main.rs"
test = false
