[package]
name = "carapace"
version = "0.8.0"
edition = "2021"
rust-version = "1.93"
description = "A security-focused personal AI assistant — hardened alternative to openclaw/clawdbot"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "signal", "io-util", "process"] }
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.13", features = ["rustls", "stream", "json", "blocking", "multipart", "form"], default-features = false }
hickory-resolver = "0.26"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "1"
strum = { version = "0.28", features = ["derive"] }
regex = "1"
glob = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native"] }
wasmtime = { version = "44", features = ["component-model"] }
thiserror = "2"
parking_lot = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["std", "zeroize"] }
futures-util = "0.3"
tokio-util = "0.7"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1"
getrandom = "0.4"
hex = "0.4"
sha2 = { version = "0.11", features = ["zeroize"] }
hkdf = "0.13"
hmac = "0.13"
subtle = "2"
mdns-sd = "0.19"
rcgen = "0.14"
x509-parser = "0.18"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1"
axum-server = { version = "0.8", features = ["tls-rustls"] }
# Direct dep for `hyper_util::rt::TokioTimer`, needed to install a
# header_read_timeout on the TLS listener (axum-server's
# http_builder().http1() requires a timer to be configured before
# the timeout takes effect). hyper-util is already a transitive dep
# via axum-server itself; promoting to a direct dep makes the import
# explicit at the call site in src/main.rs::launch_tls_server.
hyper-util = { version = "0.1", features = ["tokio"] }
notify = { version = "8.2.0", default-features = false, features = ["macos_fsevent"] }
flate2 = "1"
tar = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
libc = "0.2"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
crc32fast = "1"
rpassword = "7"
unicode-normalization = "0.1"
# sigstore-trust-root 0.6.6 depends on tough ^0.21, which is vulnerable to
# CVE-2026-6966 and CVE-2026-6967. The fork commit follows upstream's tough
# 0.22 move and also bumps rustls-webpki past current RustSec advisories while
# we wait for an upstream release.
#
# UNPIN CONDITION: drop the git deps and revert to `version = "0.6"` (or
# whatever supersedes 0.6.6) once upstream sigstore-rust publishes a
# release that bumps tough to 0.22+ AND addresses the rustls-webpki
# RustSec advisories the fork already covers. Track at:
#   https://github.com/sigstore/sigstore-rust/issues
# When unpinning: also remove the entry from `deny.toml` `allow-git`,
# regenerate Cargo.lock, and confirm `cargo audit` is clean before
# pushing.
sigstore-trust-root = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a", features = ["tuf"] }
sigstore-types = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a" }
sigstore-verify = { version = "0.6.6", git = "https://github.com/puremachinery/sigstore-rust", rev = "8e86cf3c4edf96ba9e87c7cb47764e6b78f5382a" }
matrix-sdk = { version = "0.16.1", default-features = false, features = ["e2e-encryption", "sqlite", "rustls-tls"] }
# CLI store-rekey code reads and writes serialized StoreCipher export
# blobs directly. Keep the direct dependency patched independently of
# matrix-sdk's internal version, with cross-version wire tests covering
# the serialized import/export contract.
matrix-sdk-store-encryption = "0.17.0"
# Default rusqlite uses the system libsqlite via libsqlite3-sys. The
# Windows entry below adds the `bundled` feature to ship sqlite C
# source (so MSVC builds don't need `sqlite3.lib` from the system).
# On Unix the system-libsqlite path is preferred — `bundled` would
# recompile the ~220 KB sqlite amalgamation on every Linux/macOS build
# unnecessarily. matrix-sdk-sqlite uses its own libsqlite3-sys entry
# in either case.
rusqlite = "0.37.0"

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
win32job = "2.0.3"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_IO", "Win32_System_JobObjects", "Win32_System_Threading"] }
rappct = "0.13.3"
self-replace = "1.5"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.6"

[dev-dependencies]
filetime = "0.2"
insta = { version = "1", features = ["json"] }
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
wit-component = { version = "0.250.0", features = ["dummy-module"] }
wit-parser = "0.249.0"
matrix-sdk-store-encryption-016 = { package = "matrix-sdk-store-encryption", version = "0.16.1" }

[features]
gateway = []
auth-profiles = []
keychain-tests = []
secret-service-tests = []
credential-manager-tests = []

[lib]
name = "carapace"
path = "src/lib.rs"

[[bin]]
name = "cara"
path = "src/main.rs"
test = false
